err/snaked.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/snaked'...
Listing './lib/python3.5/site-packages/snaked/core'...
Compiling './lib/python3.5/site-packages/snaked/core/context.py'...
***   File "./lib/python3.5/site-packages/snaked/core/context.py", line 41
    print 'Bad context:', c
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/snaked/core/editor.py'...
***   File "./lib/python3.5/site-packages/snaked/core/editor.py", line 96
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snaked/core/editor_list'...
Listing './lib/python3.5/site-packages/snaked/core/gui'...
Listing './lib/python3.5/site-packages/snaked/core/lang-specs'...
Compiling './lib/python3.5/site-packages/snaked/core/manager.py'...
***   File "./lib/python3.5/site-packages/snaked/core/manager.py", line 463
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/snaked/core/prefs.py'...
***   File "./lib/python3.5/site-packages/snaked/core/prefs.py", line 208
    except SyntaxError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/snaked/core/problems.py'...
***   File "./lib/python3.5/site-packages/snaked/core/problems.py", line 98
    print "%s: can't find name [%s] on line %d in %s" % (prefix, name, line, editor.uri)
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snaked/core/quick_open'...
Listing './lib/python3.5/site-packages/snaked/plugins'...
Listing './lib/python3.5/site-packages/snaked/plugins/complete_words'...
Listing './lib/python3.5/site-packages/snaked/plugins/edit_and_select'...
Listing './lib/python3.5/site-packages/snaked/plugins/external_tools'...
Compiling './lib/python3.5/site-packages/snaked/plugins/external_tools/__init__.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/external_tools/__init__.py", line 58
    except ParseException, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snaked/plugins/goto_dir'...
Listing './lib/python3.5/site-packages/snaked/plugins/goto_line'...
Listing './lib/python3.5/site-packages/snaked/plugins/hash_comment'...
Listing './lib/python3.5/site-packages/snaked/plugins/python'...
Compiling './lib/python3.5/site-packages/snaked/plugins/python/complete.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/python/complete.py", line 124
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/snaked/plugins/python/djangohints.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/python/djangohints.py", line 113
    print 'getattr', obj, name
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/snaked/plugins/python/plugin.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/python/plugin.py", line 175
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/snaked/plugins/python/pytest_runner.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/python/pytest_runner.py", line 49
    print 'TestRunner: %s not founded' % handler_name
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/snaked/plugins/python_bcsp'...
Compiling './lib/python3.5/site-packages/snaked/plugins/python_bcsp/__init__.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/python_bcsp/__init__.py", line 39
    except SyntaxError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snaked/plugins/python_flakes'...
Compiling './lib/python3.5/site-packages/snaked/plugins/python_flakes/__init__.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/python_flakes/__init__.py", line 51
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snaked/plugins/python_ipython'...
Compiling './lib/python3.5/site-packages/snaked/plugins/python_ipython/ipython_view.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/python_ipython/ipython_view.py", line 29
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snaked/plugins/python_lint'...
Compiling './lib/python3.5/site-packages/snaked/plugins/python_lint/__init__.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/python_lint/__init__.py", line 110
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snaked/plugins/python_repl'...
Compiling './lib/python3.5/site-packages/snaked/plugins/python_repl/executor.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/python_repl/executor.py", line 80
    print '    ' * level, obj.__code__.co_name, obj, obj.__module__
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/snaked/plugins/save_positions'...
Listing './lib/python3.5/site-packages/snaked/plugins/search'...
Compiling './lib/python3.5/site-packages/snaked/plugins/search/__init__.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/search/__init__.py", line 212
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snaked/plugins/snippets'...
Compiling './lib/python3.5/site-packages/snaked/plugins/snippets/parser.py'...
***   File "./lib/python3.5/site-packages/snaked/plugins/snippets/parser.py", line 19
    matcher = re.compile(ur'\$\{(\d+)(:(.*?))?\}')
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snaked/plugins/snippets/snippets'...
Listing './lib/python3.5/site-packages/snaked/plugins/spell'...
Listing './lib/python3.5/site-packages/snaked/signals'...
Listing './lib/python3.5/site-packages/snaked/util'...
Compiling './lib/python3.5/site-packages/snaked/util/__init__.py'...
***   File "./lib/python3.5/site-packages/snaked/util/__init__.py", line 31
    os.makedirs(dname, mode=0755)
                               ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/snaked-0.4.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
